# Ppe-Detection-App

./: .flutter-plugins-dependencies 2  .gitignore  ARKADAS_ENTEGRASYON_REHBERI.md  CONTRIBUTING.md  HIZLI_BASLANGIC.md  KURULUM_TAMAMLANDI.md  LICENSE  MOBILE_BUILD_REHBERI.md  README.md  VDS_KURULUM_REHBERI.md  VDS_OZET.md  VPS_KURULUM_REHBERI.md  convert_to_coreml.py  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
assets/: index.html  labels.txt
backend/: .env.example  app.py  app_simple.py  check_model.py  dashboard.html  detector.py  requirements.txt  test_detection.py  update_face_encodings.py
ios/: PPEDetection.mlmodel  PPEDetector.swift  PPEMethodChannel.swift
ios/Flutter/: Generated 2.xcconfig  Generated 3.xcconfig  flutter_export_environment 2.sh  flutter_export_environment 3.sh
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: login_screen.dart  register_screen.dart  simple_check_screen.dart
lib/services/: camera_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements  Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
ppe-inspector-main-2/: README.md  app.yaml  pyproject.toml  requirements.txt
ppe-inspector-main-2/src/: app.py  camera.py  detector.py  ui.py  utils.py
ppe-inspector-main-2/src/templates/: index.html
ppe-inspector-main-2/tests/: test_detector.py
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+4 files in other folders)
