[tool.poetry]
name = "ppe-inspector"
version = "0.1.0"
description = "A project for validating personal protective equipment in industrial settings using a trained YOLO model."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3.20210927"
ultralytics = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"